--- a/index.html
+++ b/index.html
@@ -499,8 +499,8 @@
     <a href=”advice/catrina-mallon-advice.html”>Catrina Mallons’s Advice</a><br>
     <a href="advice/hayley-andrews-advice.html">Hayley Andrews' Advice</a><br>
     <a href="advice/court-winters-advice.html" target="_blank">Court W's Advice</a><br>
-    <a href="advice/jenn-s-advice.html">Jenn S's Advice</a>
-
+    <a href="advice/jenn-s-advice.html">Jenn S's Advice</a><br>
+    <a href=”advice/sarah-tucker-advice.html”>Sarah Tucker’s Advice</a>
   </section>
 
 </body>
